--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,8 @@ services:
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
   web:
-    image: "calltelemetry/web:version-0.2.9"
+    image: "calltelemetry/web:version-0.3.0"
+    restart: "always"
     ports: ["4000:4000"]
     environment:
       - DB_USER=calltelemetry
