--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,9 @@ services:
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
   web:
-    image: "calltelemetry/web:version-0.2.9"
+    image: "calltelemetry/web:0.3.1"
     restart: "always"
-    ports: ["4000:4000"]
+    ports: ["4000:4000","22:2222"]
     environment:
       - DB_USER=calltelemetry
       - DB_PASSWORD=changeme
