--- a/k8s/index.yaml
+++ b/k8s/index.yaml
@@ -2,8 +2,23 @@ apiVersion: v1
 entries:
   calltelemetry:
   - apiVersion: v1
+    appVersion: 0.3.6
+    created: "2020-03-20T09:44:19.081228-05:00"
+    dependencies:
+    - name: postgresql
+      repository: https://charts.bitnami.com/bitnami
+      tags:
+      - calltelemetry-database
+      version: 8.6.4
+    digest: c3a70de9432d64ef380ea1988b5f99b2dccd24a545c4e2125d6070ab7d28a96c
+    home: http://www.calltelemetry.com/
+    name: calltelemetry
+    urls:
+    - https://calltelemetry.github.io/calltelemetry/k8s/calltelemetry-0.3.6.tgz
+    version: 0.3.6
+  - apiVersion: v1
     appVersion: 0.3.5
-    created: "2020-03-19T22:18:26.085145-05:00"
+    created: "2020-03-20T09:44:19.072539-05:00"
     dependencies:
     - name: postgresql
       repository: https://charts.bitnami.com/bitnami
@@ -18,7 +33,7 @@ entries:
     version: 0.3.5
   - apiVersion: v1
     appVersion: 0.3.4
-    created: "2020-03-19T22:18:26.072438-05:00"
+    created: "2020-03-20T09:44:19.065005-05:00"
     dependencies:
     - name: postgresql
       repository: https://charts.bitnami.com/bitnami
@@ -34,7 +49,7 @@ entries:
   postgresql:
   - apiVersion: v1
     appVersion: 11.7.0
-    created: "2020-03-19T22:18:26.090593-05:00"
+    created: "2020-03-20T09:44:19.085259-05:00"
     description: Chart for PostgreSQL, an object-relational database management system
       (ORDBMS) with an emphasis on extensibility and on standards-compliance.
     digest: 0add9e54dad92494348563a8676cf126274d86e6a7cdc3a541f5a556fe2b8e90
@@ -58,4 +73,4 @@ entries:
     urls:
     - https://calltelemetry.github.io/calltelemetry/k8s/charts/postgresql-8.6.4.tgz
     version: 8.6.4
-generated: "2020-03-19T22:18:26.060205-05:00"
+generated: "2020-03-20T09:44:19.056568-05:00"
