--- a/k8s/templates/config.yaml
+++ b/k8s/templates/config.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: configmap-updater
+  namespace: calltelemetry
   labels:
     app: configmap-updater
 spec:
