--- a/k8s/templates/configmap.yaml
+++ b/k8s/templates/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ template "fullname" . }}
+  name: {{ template "name" . }}-config
   labels:
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
