--- a/k8s/templates/external-ip-discovery.yaml
+++ b/k8s/templates/external-ip-discovery.yaml
@@ -31,7 +31,7 @@ spec:
 
             while true
             do
-                IP=`./kubectl get services -n calltelemetry -o json-path='{.items[0].status.loadBalancer.ingress[0].ip}'`
+                IP=`./kubectl get services -n calltelemetry -o jsonpath='{.items[0].status.loadBalancer.ingress[0].ip}'`
                 PATCH=`printf '{"data":{"EXTERNAL_IP": "%s"}}' $IP`
                 echo ${PATCH}
                 ./kubectl patch configmap/{{ template "name" . }}-config -n calltelemetry --type=merge -p "${PATCH}"
