--- a/k8s/templates/deployment.yaml
+++ b/k8s/templates/deployment.yaml
@@ -24,8 +24,6 @@ spec:
             - containerPort: 8080
             - containerPort: 3022
           env:
-            - name: VERSION
-              value: "0.3.6"
             - name: HOST
               value: {{ .Values.hostname }}
             - name: PORT
@@ -35,6 +33,11 @@ spec:
                 secretKeyRef:
                   name: secrets
                   key: secret_key_base
+            - name: EXTERNAL_IP
+              valueFrom:
+                configMapKeyRef:
+                  name: config
+                  key: EXTERNAL_IP
             - name: DB_USER
               value:  postgres
             - name: DB_PASSWORD
