--- a/k8s/values.yaml
+++ b/k8s/values.yaml
@@ -6,6 +6,6 @@ image:
 resources: {}
 postgresql:
   postgresqlUsername: postgres
-  # postgresqlPassword: super
+  postgresqlPassword: postgres
   postgresqlDatabase: calltelemetry_prod
   name: calltelemetry_db
