--- a/k8s/templates/configmap.yaml
+++ b/k8s/templates/configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ template "name" . }}-config
+  namespace: calltelemetry
   labels:
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
