--- a/k8s/values.yaml
+++ b/k8s/values.yaml
@@ -1,4 +1,4 @@
-hostname: myserver.mydomain.com
+hostname: 
 image:
   repository: calltelemetry/web
   tag: 0.3.5
@@ -6,7 +6,5 @@ image:
 resources: {}
 global:
   postgresql:
-    # username: postgres
-    # password: postgres
     database: calltelemetry_prod
     name: calltelemetry_db
