chart changes and workflow

--- a/charts/calltelemetry/templates/config.yaml
+++ b/charts/calltelemetry/templates/config.yaml
@@ -2,7 +2,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: configmap-updater
-  namespace: calltelemetry
   labels:
     app: configmap-updater
 spec:
@@ -31,10 +30,10 @@ spec:
 
             while true
             do
-                IP=`./kubectl get services -n calltelemetry -o jsonpath='{.items[0].status.loadBalancer.ingress[0].ip}'`
+                IP=`./kubectl get services -n calltelemetry -o json-path='{.items[0].status.loadBalancer.ingress[0].ip}'`
                 PATCH=`printf '{"data":{"EXTERNAL_IP": "%s"}}' $IP`
                 echo ${PATCH}
-                ./kubectl patch configmap/{{ template "name" . }}-config -n calltelemetry --type=merge -p "${PATCH}"
+                ./kubectl patch configmap/config -n calltelemetry --type=merge -p "${PATCH}"
 
                 sleep 10
             done
