--- a/charts/calltelemetry/values.yaml
+++ b/charts/calltelemetry/values.yaml
@@ -1,7 +1,7 @@
 hostname: myserver.mydomain.com
 image:
   repository: calltelemetry/web
-  tag: 0.3.6rc2
+  tag: 0.3.6
   annotations:
 resources: {}
 postgresql:
