deployed via ⎈ Helm Publish Action for b9406ecc03592d64fe91bf4beb434f573449e2ba

--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -1,9 +1,25 @@
 apiVersion: v1
 entries:
+  CallTelemetry:
+  - apiVersion: v1
+    appVersion: 0.3.6
+    created: "2020-04-22T03:38:08.996508687Z"
+    dependencies:
+    - name: postgresql
+      repository: https://charts.bitnami.com/bitnami
+      tags:
+      - calltelemetry-database
+      version: 8.6.4
+    digest: a6e70832f3d79177edea720c7aa39ec7df02fbaf52a448f730a8d82a2dfcf8b2
+    home: http://www.calltelemetry.com/
+    name: CallTelemetry
+    urls:
+    - CallTelemetry-0.3.6.tgz
+    version: 0.3.6
   calltelemetry:
   - apiVersion: v1
     appVersion: 0.3.6
-    created: "2020-04-22T02:59:57.184673824Z"
+    created: "2020-04-22T03:38:09.012787775Z"
     dependencies:
     - name: postgresql
       repository: https://charts.bitnami.com/bitnami
@@ -16,4 +32,34 @@ entries:
     urls:
     - calltelemetry-0.3.6.tgz
     version: 0.3.6
-generated: "2020-04-22T02:59:57.173357611Z"
+  - apiVersion: v1
+    appVersion: 0.3.5
+    created: "2020-04-22T03:38:09.009424257Z"
+    dependencies:
+    - name: postgresql
+      repository: https://charts.bitnami.com/bitnami
+      tags:
+      - calltelemetry-database
+      version: 8.6.4
+    digest: 16939c2402382df571b9c7e4f0e88c466a67734573fbb556dcc43d32fcd73e20
+    home: http://www.calltelemetry.com/
+    name: calltelemetry
+    urls:
+    - calltelemetry-0.3.5.tgz
+    version: 0.3.5
+  - apiVersion: v1
+    appVersion: 0.3.4
+    created: "2020-04-22T03:38:09.002719422Z"
+    dependencies:
+    - name: postgresql
+      repository: https://charts.bitnami.com/bitnami
+      tags:
+      - calltelemetry-database
+      version: 8.6.4
+    digest: ab0046f565609f45dc68f254f740e0f1f0d7842148178e339f28f3640e3f5c7f
+    home: http://www.calltelemetry.com/
+    name: calltelemetry
+    urls:
+    - calltelemetry-0.3.4.tgz
+    version: 0.3.4
+generated: "2020-04-22T03:38:08.983064311Z"
