--- a/.github/workflows/helm_charts.yaml
+++ b/.github/workflows/helm_charts.yaml
@@ -1,9 +1,9 @@
 name: Release Charts
 
 on: push
-  # push:
-  #   paths:
-  #     - 'charts/**'
+  push:
+    paths:
+      - 'charts/**'
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -15,7 +15,11 @@ jobs:
         run: |
           git config user.name "jason-calltelemetry"
           git config user.email "jason-calltelemetry@users.noreply.github.com"
+      # - name: Run chart-releaser
+        # uses: calltelemetry/helm-gh-pages-action@master
+        # with:
+          # access-token: ${{ secrets.CR_TOKEN }}
       - name: Run chart-releaser
-        uses: calltelemetry/helm-gh-pages-action@master
-        with:
-          access-token: ${{ secrets.CR_TOKEN }}
+        uses: helm/chart-releaser-action@v1.0.0-rc.1
+        env:
+          CR_TOKEN: "${{ secrets.CR_TOKEN }}"
