--- a/charts/calltelemetry/Chart.yaml
+++ b/charts/calltelemetry/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 name: calltelemetry
-version: 0.3.6rc4
-appVersion: 0.3.6
+version: 0.3.5
+appVersion: 0.3.5
 home: http://www.calltelemetry.com/
