--- a/.github/workflows/helm_charts.yaml
+++ b/.github/workflows/helm_charts.yaml
@@ -3,7 +3,7 @@ name: Release Charts
 on:
   push:
     paths:
-      - 'charts/calltelemetry/**'
+      - 'charts/**'
 jobs:
   release:
     runs-on: ubuntu-latest
