--- a/.github/workflows/helm_charts.yaml
+++ b/.github/workflows/helm_charts.yaml
@@ -1,10 +1,9 @@
 name: Release Charts
 
 on: release
-  # push:
-    # branches:
-      # - master
-
+  push:
+    paths:
+      - 'charts/**'
 jobs:
   release:
     runs-on: ubuntu-latest
