--- a/.github/workflows/helm_charts.yaml
+++ b/.github/workflows/helm_charts.yaml
@@ -17,8 +17,9 @@ jobs:
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
       - name: Run chart-releaser
-        uses: helm/chart-releaser-action@v1.0.0-rc.1
-        charts_dir: /charts
-        charts_repo_url: https://calltelemetry.github.io/calltelemetry
+        uses: helm/chart-releaser-action@v1.0.0-rc.2
+        with:
+          charts_dir: /charts
+          charts_repo_url: https://calltelemetry.github.io/calltelemetry
         env:
           CR_TOKEN: "${{ secrets.CR_TOKEN }}"
