--- a/.github/workflows/helm_charts.yaml
+++ b/.github/workflows/helm_charts.yaml
@@ -19,6 +19,7 @@ jobs:
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.0.0-rc.2
         with:
+          charts_dir: .
           charts_repo_url: https://calltelemetry.github.io/calltelemetry
         env:
           CR_TOKEN: "${{ secrets.CR_TOKEN }}"
