--- a/charts/test/Chart.yaml
+++ b/charts/test/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-name: calltelemetry
-version: 0.3.6
-appVersion: 0.3.6
+name: test
+version: 0.3.7
+appVersion: 0.3.7
 home: http://www.calltelemetry.com/
