--- a/charts/stable/Chart.yaml
+++ b/charts/stable/Chart.yaml
@@ -2,4 +2,4 @@ apiVersion: v1
 name: calltelemetry
 version: 0.3.6
 appVersion: 0.3.6
-home: http://www.calltelemetry.com/
+home: https://www.calltelemetry.com/
