--- a/charts/stable/values.yaml
+++ b/charts/stable/values.yaml
@@ -8,3 +8,4 @@ global:
   postgresql:
     postgresqlDatabase: calltelemetry_db
     postgresqlUsername: calltelemetry
+    postgresqlPassword: {{ randAlphaNum 10 | quote }}
