--- a/charts/stable/templates/deployment.yaml
+++ b/charts/stable/templates/deployment.yaml
@@ -41,7 +41,7 @@ spec:
             - name: DB_USER
               value:  {{ .Values.global.postgresql.postgresqlUsername }}
             - name: DB_PASSWORD
-              value:  {{ .Values.global.postgresql.postgresqlPassword }}
+              value: postgres
               # valueFrom:
                 # secretKeyRef:
                   # name: {{ .Release.Name }}-postgresql
