--- a/charts/stable/templates/secrets.yaml
+++ b/charts/stable/templates/secrets.yaml
@@ -6,3 +6,11 @@ metadata:
 type: Opaque
 data:
   secret_key_base: CxKTsHCMFzqEKlN9Q96COZ68CPmwqAQ4z3z15RYRpKXaF3xyKjvydheX/PoFTgx6
+# ---
+# kind: Secret
+# metadata:
+#   name: secrets
+#   namespace: calltelemetry
+# type: Opaque
+# data:
+#   secret_key_base: CxKTsHCMFzqEKlN9Q96COZ68CPmwqAQ4z3z15RYRpKXaF3xyKjvydheX/PoFTgx6
