--- a/charts/stable/values.yaml
+++ b/charts/stable/values.yaml
@@ -6,6 +6,7 @@ image:
 resources: {}
 global:
   postgresql:
+    image.tag: 9.6.18
     postgresqlDatabase: calltelemetry_db
     # postgresqlUsername: calltelemetry
     postgresqlPassword: calltelemetry-postgres
