--- a/charts/stable/templates/deployment.yaml
+++ b/charts/stable/templates/deployment.yaml
@@ -39,7 +39,7 @@ spec:
                   name: {{ template "name" . }}-config
                   key: EXTERNAL_IP
             - name: DB_USER
-              value:  postgres
+              value:  calltelemetry
             - name: DB_PASSWORD
               valueFrom:
                 secretKeyRef:
