--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   db:
-    image: "postgres"
+    image: "bitnami/postgresql"
     restart: "always"
     environment:
       - POSTGRES_USER=calltelemetry
@@ -11,13 +11,16 @@ services:
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
   web:
-    image: "calltelemetry/web:0.3.5"
+    image: "calltelemetry/web:0.3.7"
     restart: "always"
     ports: ["80:4000", "22:3022"]
     environment:
       - DB_USER=calltelemetry
       - DB_PASSWORD=postgres
       - DB_HOSTNAME=db
-      - DB_NAME=calltelemetry_prod
-      - PORT=4000
+      - DB_NAME=calltelemetry_prod      
+      - INTERNAL_PORT=4000
+      - EXTERNAL_PORT=80
+      - HOSTNAME=$HOST_IP
       - SECRET_KEY_BASE=wu3JgPq0IMvIMsJJZ940biL7jVkhLvHJ9I6aqlvhgonVA2eMdOgmdEjWMFAjRKSr
+      - SIGNING_SALT=7HekGYwxATz33gM/rH9q2mV+uKJq5/H
