--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,9 +2,7 @@ name: ci
 on:
   push:
     branches:
-      - master
-      - main
-      - gh-pages
+      - docs
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -14,4 +12,4 @@ jobs:
         with:
           python-version: 3.x
       - run: pip install mkdocs-material
-      - run: mkdocs gh-deploy --force
+      - run: mkdocs gh-deploy
