--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,15 +2,15 @@ site_name: CallTelemetry
 site_url: https://docs.calltelemetry.com
 nav:
     - Home: index.md
-    - Architecture: architecture.md
-    - Licensing: licensing.md
     - Change Log: changelog.md
+    - Licensing: licensing.md
+    - Architecture: architecture.md
     - Cloud Demo: cloud.md
     - Installing:
-      # - "Platform Choices": deployment/choices.md
+      - "Platform Choices": deployment/choices.md
       - "OVA Appliance": deployment/ova.md
-      - "Docker": deployment/docker.md
-      - "Kubernetes": deployment/k8s.md
+      # - "Docker": deployment/docker.md
+      - "Kubernetes": deployment/k3s.md
     - User Guide:
       - "Policies": features/policy.md
       - "MCID Blocking": features/mcid.md
@@ -29,8 +29,8 @@ nav:
 theme: 
   name: material
   logo: assets/logo.png
-  features:
-    - navigation.tabs
+  # features:
+    # - navigation.tabs
   font:
     text: Roboto
     code: Roboto Mono
