--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
   web:
-    image: "calltelemetry/web:0.4.0"
+    image: "calltelemetry/web:0.4.0-es4"
     restart: "always"
     ports: ["80:4000", "22:3022"]
     environment:
@@ -25,5 +25,6 @@ services:
       - EXTERNAL_IP=$DEFAULT_IPV4
       - SECRET_KEY_BASE=wu3JgPq0IMvIMsJJZ940biL7jVkhLvHJ9I6aqlvhgonVA2eMdOgmdEjWMFAjRKSr
       - SIGNING_SALT=7HekGYwxATz33gM/rH9q2mV+uKJq5/H
+      - CDR_ROOT_PATH="/sftp"
     volumes:
       - ./sftp:/sftp
