--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,46 +1,52 @@
 site_name: Call Telemetry Docs
 site_url: https://docs.calltelemetry.com
 nav:
-    - Change Log: changelog.md
-    - Cloud Demo: cloud.md
-    - Design: 
+  - Change Log: changelog.md
+  - Cloud Demo: cloud.md
+  - Design:
       - "Architecture": architecture.md
       # - "Sizing": deployment/sizing.md
       - "Single OVA or Cluster": deployment/choices.md
-    # - Platform:
-    #   - "Load Testing": deployment/load-testing.md
-    - Installing:
+  # - Platform:
+  #   - "Load Testing": deployment/load-testing.md
+  - Installing:
       - "OVA Appliance": deployment/ova.md
       - "HA Cluster": deployment/k3s.md
-    - Integration to Callmanager:
+  - Integration to Callmanager:
       - "Add a Call Control Profile": setup/curri.md
       - "Add a CUBE": setup/cube.md
+      - "Add CDR Accounting": setup/cdr.md
       - "Policy Deployment Guide": setup/policy-assignment.md
-      - "Add CDR Events": setup/cdr.md
-      - "Processing MCID Spam Tags": setup/mcid.md
-    - Using Policies:
+      - "Enable MCID for Spam Tagging": setup/mcid.md
+  - Using Policies:
       - "Policy Flow": setup/policy-flow.md
       - "Rule Features": features/policy.md
       - "MCID Blocking": features/mcid.md
       - "Apps": features/apps.md
       - "Organizations": features/organizations.md
-    - App Catalog:
-        - "Catalog": apps/webhooks.md
-        # - "SMTP": apps/smtp.md
-    - Troubleshooting:
+  - Using Missed Call Alerts:
+      - "Setup AXL User Sync": features/axl-sync.md
+      - "Enable Missed Call on Users": features/enable_missed_call_alerts.md
+  - App Catalog:
+      - "Catalog": apps/webhooks.md
+      # - "SMTP": apps/smtp.md
+  - Troubleshooting:
       - "Logs": troubleshooting/logs.md
       - "CDR": troubleshooting/cdr.md
-      # - "CURRI/ECC": troubleshooting/curri.md
+    # - "CURRI/ECC": troubleshooting/curri.md
 extra_css: [extra.css]
-theme: 
+theme:
   name: material
   logo: assets/logo.png
   # features:
-    # - navigation.tabs
+  # - navigation.tabs
   font:
     text: Roboto
     code: Roboto Mono
-google_analytics: ['UA-153385083-2', 'mkdocs.org']
+extra:
+  analytics:
+    provider: google
+    property: UA-153385083-2
 markdown_extensions:
   - toc:
       permalink: "#"
