--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
   web:
-    image: "calltelemetry/web:0.4.3"
+    image: "calltelemetry/web:0.4.4-rc1"
     restart: "always"
     ports: ["80:4000", "22:3022"]
     environment:
