--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     volumes:
       - ./postgres-data:/bitnami/postgresql
   web:
-    image: "calltelemetry/web:0.6.4"
+    image: "calltelemetry/web:0.6.4-es1"
     restart: "always"
     ports: ["80:4080", "443:4001", "22:3022"]
     environment:
