--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
-  tracer:
-    image: "calltelemetry/tracer:0.6.4"
+  traceroute:
+    image: "calltelemetry/traceroute:0.6.7"
     user: root
     expose: [4100]
     ports: ["4100:4100"]
@@ -17,7 +17,7 @@ services:
     volumes:
       - ./postgres-data:/bitnami/postgresql
   web:
-    image: "calltelemetry/web:0.6.6"
+    image: "calltelemetry/web:0.6.7"
     restart: "always"
     ports: ["80:4080", "443:4001", "22:3022"]
     environment:
